--- a/myservice/templates/home.html
+++ b/myservice/templates/home.html
@@ -10,7 +10,7 @@
 <p>{{title}}  {{content}}</p>
 <ul>
     {% for user in data %}
-        <li>title:{{ user.title }} password:{{ user.content }}</li>
+        <li>Title:{{ user.title }} Content:{{ user.content }}</li>
     {% endfor %}
 </ul>
 </body>
